--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/og": "^0.8.5",
     "lucide-react": "^0.469.0",
     "next": "latest",
     "react": "^18.3.1",
@@ -24,6 +25,3 @@
     "typescript": "^5.6.3"
   }
 }
-
-
-
