--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "@vercel/og": "^0.8.5",
     "lucide-react": "^0.469.0",
     "next": "latest",
